# docxide

./: .gitignore  README.md  pyproject.toml
docx_studio/: __init__.py  builder.py  elements.py  engine.py  styles.py
