[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-studio"
version = "0.1.0"
description = "Declarative VDOM + Fluent Builder for python-docx document generation"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.2.0",
]

[tool.setuptools.packages.find]
include = ["docx_studio*"]
